--- a/Piaic-js-tasks/index.html
+++ b/Piaic-js-tasks/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="first-assignment.js"></script>
+    <script src="second-assignment.js"></script>
     <title>Piaic Js Assignments</title>
 </head>
 <body>
