--- a/Piaic-js-tasks/index.html
+++ b/Piaic-js-tasks/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <script src="first-assignment.js"></script>
     <script src="second-assignment.js"></script>
+    <script src="third-assignment.js"></script>
     <title>Piaic Js Assignments</title>
 </head>
 <body>
