Fourth assignment, Piaic js video series

--- a/Piaic-js-tasks/index.html
+++ b/Piaic-js-tasks/index.html
@@ -5,6 +5,8 @@
     <script src="first-assignment.js"></script>
     <script src="second-assignment.js"></script>
     <script src="third-assignment.js"></script>
+    <script src="third-assignment.js"></script>
+    <script src="fourth-assignment.js"></script>
     <title>Piaic Js Assignments</title>
 </head>
 <body>
